# MC_Render

./: .gitignore.txt  CMakeLists.txt  README.md
ext/gl3w/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  GLEW.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  gl3w.vcxproj  gl3w.vcxproj.filters
res/: CMakeLists.txt
res/shaders/: TextureFragmentShader.fragmentshader  TransformVertexShader.vertexshader  basic_gerst_vert.glsl
src/: CMakeLists.txt  Camera.cpp  Camera.hpp  TransformVertexShader.vertexshader  asset_factory.cpp  asset_factory.h  basic_shader.h  camera.cpp  camera.h  field.cpp  field.h  grass.cpp  grass.h  imgui_impl.cpp  main.cpp  simple_image.hpp  util.hpp  wave_generator.h
